# simple_dungeon

./: .gitignore  CMakeLists.txt  README.md  TODO.md  particle_designer.particle  tileset.tileset
assets/: bloodaltar.ase  candle.ase  dungeon.tsx  game.tiled-session  tileset.json  tileset.tileset
assets/SpiderPack/: Read me before use.txt
assets/c++ - Why do I get an error in forming reference to reference type map - Stack Overflow_files/: 2931.en.js  8825.en.js  client  f.txt  js  one-tap.en.js  pub.js  select.html  signup-dialog.en.js  signup-modal.en.js
assets/rooms/: big_room.room  room.room  start_room.tmx
assets/shaders/: lighting.fs
scripts/: devlog-1.md
src/: AI.cpp  AI.hpp  AStar.cpp  AStar.hpp  Animation.cpp  Animation.hpp  Components.cpp  Components.hpp  Constructors.hpp  Dungeon.cpp  Dungeon.hpp  DungeonGenerator.hpp  EmptyDungeonGenerator.cpp  EmptyDungeonGenerator.hpp  Enemy.cpp  Enemy.hpp  Entity.hpp  Game.cpp  Game.hpp  Health.cpp  Health.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  Room.cpp  Room.hpp  SimpleDungeonGenerator.cpp  SimpleDungeonGenerator.hpp  SquareRenderer.cpp  SquareRenderer.hpp  Systems.cpp  Systems.hpp  TileSet.cpp  TileSet.hpp  consts.hpp  main.cpp  renderable.hpp
src/ai/: AiBrain.hpp
src/ai/brains/: DungeonSpider.cpp
src/constructors/: ParticleConstructor.cpp  PlayerConstructor.cpp
src/data/: BasicParticle.hpp  Dungeon.cpp  Dungeon.hpp  FatTile.hpp  Room.cpp  Room.hpp  Vector2Lua.hpp
src/entities/BloodAltar/: BloodAltar.hpp  constructor.cpp  constructor.hpp
src/entities/Candle/: constructor.hpp
src/entities/DungeonSpider/: DungeonSpider.cpp  DungeonSpider.hpp  constructor.cpp  constructor.hpp
src/entities/Particle/: ParticleConstructor.cpp
src/entities/Player/: Player.cpp  PlayerConstructor.cpp
src/generators/: DungeonGenerator.hpp  EmptyDungeonGenerator.cpp  EmptyDungeonGenerator.hpp  Generators.hpp  SimpleDungeonGenerator.cpp  SimpleDungeonGenerator.hpp
src/renderers/: PlayerRenderer.cpp  PlayerRenderer.hpp  Renderer.hpp  SpellCasterRenderer.cpp  SpellCasterRenderer.hpp  SquareRenderer.cpp  SquareRenderer.hpp  TextureRenderer.cpp  TextureRenderer.hpp  stats_renderer.cpp  stats_renderer.hpp
src/spells/: CastDirection.hpp  Fireball.cpp  ProjectileSpell.cpp  ProjectileSpell.hpp  Spell.cpp  Spell.hpp  Spells.hpp
src/systems/: AI.cpp  Animator.cpp  CameraFollowerSystem.cpp  Collision.cpp  Enemy.cpp  Health.cpp  Particle.cpp  ParticleSystem.cpp  Physics.cpp  Player.cpp  Projectile.cpp  SpellCaster.cpp
src/utils/: AStar.cpp  Animation.cpp  Animation.hpp  CastTexture.cpp  CastTexture.hpp  TextureCache.cpp  TextureCache.hpp  TileSet.cpp  TileSet.hpp  gui_file_dialog.h  input.hpp  utils.cpp  utils.hpp
tools/: particle_designer.cpp  spritesheet_spliter.cpp  test_dungeon_generator.cpp  tileset_maker.cpp  tileset_tool.cpp
